# adventofcode2024

./: day01.py  day02.py  day03.py  day04.py  day05.py  pyproject.toml
